zabbix-single/overlays/dev/patch-replicas.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
spec:
  replicas: 1
